k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
      component: web
  ports:
    # expose port 3000 on the pod (targetPort) to
    # the rest of the cluster on port 3000 (port)
    - port: 3000
      targetPort: 3000
