k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  # annotations are higher level configurations around the ingress that gets created
  # (not sure why use-regex and rewrite-target go in here and not in spec though
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # client fires requests to /api/some-route, server just listens under
    # some-route. so we remove the first path segment, just like we did when
    # setting up nginx manually using docker-compose and elastic beanstalk
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # see regexes below
spec:
  # only use the nginx ingress controller, discard any other ingress controllers (e.g. one provisioned by cloud provider)
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend: # not an actual backend, but that's what the field is called
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
